welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: illegal start of simple expression
  while (;estSurBiscuit()) {
         ^Methods:6: error: ';' expected but ')' found.
  while (;estSurBiscuit()) {
                         ^